Fixes to Spacing and Copy Size for Multiple questions

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -198,7 +198,7 @@
 		.label-wrap {
 			position: absolute;
 			left: 88px;
-			max-width: 83%;
+			max-width: 82%;
 			display: table;
 			height: 70px;
 
@@ -252,7 +252,7 @@
 		.label-wrap {
 			position: absolute;
 			left: 88px;
-			max-width: 83%;
+			max-width: 82%;
 			display: table;
 			height: 70px;
 
