--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -72,7 +72,7 @@ header.header-desktop {
 		.btn-text {
 			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 			color: #000;
-			font-size: 8px;
+			font-size: 9px;
 			position: relative;
 			left: 5px;
 			bottom: 9px;
@@ -458,8 +458,6 @@ header.header-desktop {
 			margin-top: 68px;
 		}
 	}
-
-
 }
 
 .slidey.animateLeft {
