--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -379,6 +379,10 @@ a.answer-box.picture-4 {
     }
 }
 
+.regular-3-container {
+    width: 1100px;
+}
+
 @media(max-width:1180px) and (min-width:1024px) {
 	.slidey {
 		width: 927px !important;
